- Change Style "Add" and "Cancle" Button in AddCarDialog

4/28/2020
- Search users by car id

4/30/2020
- improve register and login design

5/2/2020
- show chat list and message by car id
- separate each car id fragment

5/3/2020
- remove some junk code
- fix notification
- register must be input firstname and lastname
- delete search_name , username and imageURL
- add progress bar to SearchActivity
- unverified user will show red

5/4/2020
- add splash screen on start up

5/5/2020
- add giffy dialog

5/8/2020
- keyboard hidden when click search
- add clear text button on search edit text
- show date in message activity

5/9/2020
- show "today" in MessageActivity if sent message date is today and show only sent time on last message
- if message is not older than years, show only date and month
- add delete chatlist and delete car
- add report an inappropriate user
- fix minor bug
- hidden phone number when register

5/10/2020
- fix notification bug

5/11/2020
- add car photo
- fix add car photo
- fix add car photo rotate

5/12/2020
- also delete car photo when delete car

5/14/2020
- send and show image in chat

5/17/2020
- fix chat edittext box in message activity
- fix all string in application, support 2 language (ENG, TH)
- store color as int in database

5/19/2020
- fix minor bugs
- change province, brand and color to searchable spinner
- fix orientation
- fix imageview wrong scale in messageActivity

5/20/2020
- improve search check car province does not exist
- check car province does not exist when add car
- fix all read/write database

5/21/2020
- fix giffy dialog bug
- show phone number in MessageActivity

5/22/2020
- verify each car instead user

5/23/2020
- verify vehicle registration book

5/24/2020
- report if your car exist
- notification

5/25/2020
- improve login/register
- imrpove warning banner layout
- show phone number after have some chat
- add warn dialog in messageActivity
- show warn dialog only 1 time in MainActivity