@@ -27,7 +27,6 @@ public class MessageAdapter extends RecyclerView.Adapter<MessageAdapter.ViewHold
 
     public static final int MSG_TYPE_LEFT = 0;
     public static final int MSG_TYPE_RIGHT = 1;
-    MessageActivity ms = new MessageActivity();
 
     private Context mContext;
     private List<Chat> mChat;
@@ -91,7 +90,7 @@ public class MessageAdapter extends RecyclerView.Adapter<MessageAdapter.ViewHold
         if(chat.getMessage_type().equals("text")){
             holder.chat_image.setVisibility(View.GONE);
             holder.show_message.setVisibility(View.VISIBLE);
-            holder.show_message.setText(ms.filterBadWords(chat.getMessage().toString()));
+            holder.show_message.setText(chat.getMessage());
 
 
         }else if(chat.getMessage_type().equals("image")){
